--- a/SleepyCode/package.json
+++ b/SleepyCode/package.json
@@ -2,7 +2,7 @@
   "name": "sleepycode",
   "description": "darkTheme",
   "displayName": "Sleepy Code",
-  "version": "0.0.0",
+  "version": "0.0.",
   "icon": "assets/icon.jpg",
   "keywords": ["theme","dark","purple","dark theme"],
   "publisher": "yellowcat",
@@ -15,7 +15,7 @@
       {
         "label": "Coding",
         "uiTheme": "vs-dark",
-        "path": "./theme/coding-color-theme.json"
+        "path": "./theme/sleepycode/-color-theme.json"
       }
     ]
   },
